# paper-viz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  corpus_generator.py  docker-compose.yml  output.json  output.txt
.devcontainer/: devcontainer.json
corpus/: manim_community.jsonl  synthetic.jsonl
cpp_dev_container_starter/.devcontainer/: Dockerfile  devcontainer.json
frontend/: package-lock.json  package.json
frontend/components/: FileUpload.tsx  Results.tsx
frontend/pages/: index.js  index.tsx
frontend/pages/api/: proxy.js
ingester/: CMakeLists.txt  Dockerfile  main.py
ingester/src/: main.cpp
orchestrator/: Dockerfile  app.py  requirements.txt
renderer/: Dockerfile  app.py  requirements.txt
summarizer/: Dockerfile  app.py
